--- a/TotallyWorkingBlazorShowcase/TotallyWorkingBlazorShowcase.csproj
+++ b/TotallyWorkingBlazorShowcase/TotallyWorkingBlazorShowcase.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
       <PackageReference Include="Blazored.Modal" Version="7.1.0" />
       <PackageReference Include="BlazorStyled" Version="3.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
