--- a/TotallyWorkingBlazorShowcase/TotallyWorkingBlazorShowcase.csproj
+++ b/TotallyWorkingBlazorShowcase/TotallyWorkingBlazorShowcase.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
       <PackageReference Include="Blazored.Modal" Version="7.1.0" />
       <PackageReference Include="BlazorStyled" Version="3.1.0" />
+      <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
         <PrivateAssets>all</PrivateAssets>
